# Prog1_Uebungsblatt4

./: .gitignore  .project  CMakeLists.txt  vcpkg.json
include/: Configuration.h  Element.h  Liste.h  Spiel.h
src/: Eingabe.c  Element.c  Liste.c  Schlange.c  SimpleSnake.c  Spiel.c
